iniciando a section de apresentação

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <!-- LINK ICONES -->
+    <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet">
     <!-- CSS PERSONALIZADO -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -22,7 +25,7 @@
             <span class="navbar-toggler-icon "></span>
           </button>
                 <div class="collapse navbar-collapse " id="navbarNav ">
-                    <ul class="navbar-nav ms-auto px-5 ">
+                    <ul class="navbar-nav ms-auto px-4">
                         <li class="nav-item ">
                             <a class="nav-link " href="# ">Home</a>
                         </li>
@@ -41,7 +44,7 @@
         <!--INICIO SECTION HOME INICIAL-->
         <section class="inicial-home vh-100 d-flex align-items-center ">
             <div class="container ">
-                <div class="row ">
+                <div class="row mb-5">
                     <div class="col-lg-7 mx-auto text-center container-content">
                         <h1 class="display-4 text-white ">Tudo o que você precisa em impressão Silk-Screen</h1>
                         <p class="text-white my-3 ">Aqui você encontrará uma solução personalizada de acordo com a sua necessidade. Trabalhamos para atender rápido e com excelência.</p>
@@ -53,76 +56,52 @@
     </div>
     <!--FIM SECTION HOME INICIAL-->
     <section class="secundaria-home">
-        <div class=" container ">
-            <div class="row ">
+        <div class=" container">
+            <div class="row mb-5">
                 <div class="col-md-8 mx-auto text-center">
-                    <h2 class="text-primary">O que você precisa?</h2>
-                    <p class="secundaria-content mb-5">Desenvolvemos e produzimos o seu produto de acordo com a sua nessecidade. Produzimos com excelência e matéria prima de qualidade.</p>
+                    <h2 class="text-primary mb-4">O que você precisa?</h2>
+                    <p class="secundaria-content mb-3">Desenvolvemos e produzimos o seu produto de acordo com a sua nessecidade. Produzimos com excelência e matéria prima de qualidade.</p>
                 </div>
             </div>
-        </div>
 
-        <div class="row mx-auto g-4">
-            <div class="col-lg-4 col-sm-6 mt-3 mb-3">
-                <div class="service card-effect">
-                    <div class="iconbox">
-                        <img src="img/jpg/img-etiqueta.jpg">
+            <div class="row g-4">
+                <div class="col-lg-3 col-sm-6">
+                    <div class="service card-effect">
+                        <div class="iconbox">
+                            <i class="bx bxs-edit-alt"></i>
+                        </div>
+                        <h5 class="mt-4 mb-2">Desenvolvimento</h5>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum,ducimus recusandae, doloremque quam non dolore obcaecati!</p>
                     </div>
-                    <h5 class="mt-4 mb-2">Etiqueta</h5>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum,ducimus recusandae, doloremque quam non dolore obcaecati!</p>
                 </div>
-            </div>
-
-            <div class="col-lg-4 col-sm-6 mt-3 mb-3">
-                <div class="service card-effect">
-                    <div class="iconbox">
-                        <img src="img/jpg/img-etiqueta.jpg">
+                <div class="col-lg-3 col-sm-6">
+                    <div class="service card-effect">
+                        <div class="iconbox">
+                            <i class="bx bxs-color-fill"></i>
+                        </div>
+                        <h5 class="mt-4 mb-2">Impressão</h5>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum,ducimus recusandae, doloremque quam non dolore obcaecati!</p>
                     </div>
-                    <h5 class="mt-4 mb-2">Etiqueta</h5>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum,ducimus recusandae, doloremque quam non dolore obcaecati!</p>
                 </div>
-            </div>
-
-            <div class="col-lg-4 col-sm-6 mt-3 mb-3">
-                <div class="service card-effect">
-                    <div class="iconbox">
-                        <img src="img/jpg/img-etiqueta.jpg">
+                <div class="col-lg-3 col-sm-6">
+                    <div class="service card-effect">
+                        <div class="iconbox">
+                            <i class="bx bxs-note"></i>
+                        </div>
+                        <h5 class="mt-4 mb-2">Montagem</h5>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum,ducimus recusandae, doloremque quam non dolore obcaecati!</p>
                     </div>
-                    <h5 class="mt-4 mb-2">Etiqueta</h5>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum,ducimus recusandae, doloremque quam non dolore obcaecati!</p>
                 </div>
-            </div>
-
-            <div class="col-lg-4 col-sm-6 mt-3 mb-3">
-                <div class="service card-effect">
-                    <div class="iconbox">
-                        <img src="img/jpg/img-etiqueta.jpg">
+                <div class="col-lg-3 col-sm-6">
+                    <div class="service card-effect">
+                        <div class="iconbox">
+                            <i class="bx bxs-rocket"></i>
+                        </div>
+                        <h5 class="mt-4 mb-2">Acabamento</h5>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum,ducimus recusandae, doloremque quam non dolore obcaecati!</p>
                     </div>
-                    <h5 class="mt-4 mb-2">Etiqueta</h5>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum,ducimus recusandae, doloremque quam non dolore obcaecati!</p>
                 </div>
             </div>
-
-            <div class="col-lg-4 col-sm-6 mt-3 mb-3">
-                <div class="service card-effect">
-                    <div class="iconbox">
-                        <img src="img/jpg/img-etiqueta.jpg">
-                    </div>
-                    <h5 class="mt-4 mb-2">Etiqueta</h5>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum,ducimus recusandae, doloremque quam non dolore obcaecati!</p>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-sm-6 mt-3 mb-3">
-                <div class="service card-effect">
-                    <div class="iconbox">
-                        <img src="img/jpg/img-etiqueta.jpg">
-                    </div>
-                    <h5 class="mt-4 mb-2">Etiqueta</h5>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum,ducimus recusandae, doloremque quam non dolore obcaecati!</p>
-                </div>
-            </div>
-
         </div>
     </section>
 
