--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div class="home">
+    <header class="home">
         <!--NAVBAR-->
         <nav class="navbar navbar-expand-lg py-2">
             <div class="container">
@@ -45,7 +45,7 @@
         <section class="inicial-home vh-100 d-flex align-items-center ">
             <div class="container ">
                 <div class="row mb-5">
-                    <div class="col-lg-7 mx-auto text-center container-content">
+                    <div class="col-lg-7 mx-auto mt-5 text-center container-content">
                         <h1 class="display-4 text-white ">Tudo o que você precisa em impressão Silk-Screen</h1>
                         <p class="text-white my-3 ">Aqui você encontrará uma solução personalizada de acordo com a sua necessidade. Trabalhamos para atender rápido e com excelência.</p>
                         <a class="btn btn-secondary" href="#">Contato</a>
@@ -53,7 +53,7 @@
                 </div>
             </div>
         </section>
-    </div>
+    </header>
     <!--FIM SECTION HOME INICIAL-->
     <section class="secundaria-home">
         <div class=" container">
