--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <section class="inicial-home vh-100 d-flex align-items-center ">
             <div class="container ">
                 <div class="row mb-5">
-                    <div class="col-lg-7 mx-auto mt-5 text-center container-content">
-                        <h1 class="display-4 text-white ">Tudo o que você precisa em impressão Silk-Screen</h1>
+                    <div class="col-lg-7 mx-auto mt-5 mb-5 text-center container-content">
+                        <h1 class="display-4 text-white mt-5">Tudo o que você precisa em impressão Silk-Screen!</h1>
                         <p class="text-white my-3 ">Aqui você encontrará uma solução personalizada de acordo com a sua necessidade. Trabalhamos para atender rápido e com excelência.</p>
                         <a class="btn btn-secondary" href="#">Contato</a>
                     </div>
@@ -55,6 +55,7 @@
         </section>
     </header>
     <!--FIM SECTION HOME INICIAL-->
+    <!--iNICIO SECTION HOME SECUNDARIA-->
     <section class="secundaria-home">
         <div class=" container">
             <div class="row mb-5">
@@ -104,9 +105,67 @@
             </div>
         </div>
     </section>
-
-
-
+    <!--FIM SECTION HOME SECUNDARIA-->
+    <!--iNICIO CTA-->
+    <div class="cta">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8">
+                    <h2 class="text-white">Conheça mais sobre nossos serviços.</h2>
+                    <p class="text-white">Clique em saiba mais, e confira tudo o que podemos lhe oferecer!</p>
+                </div>
+                <div class="col-auto">
+                    <a href="#" class="btn btn-cta mt-4">Saiba Mais</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--FIM CTA-->
+    <!--INICIO HOME PRODUTOS-->
+    <section class="produtos-home">
+        <div class="container glass-effect">
+            <div class="row">
+                <div class="col-12 section-intro">
+                    <h2 class="text-primary mb-3">Alguns produtos...</h2>
+                    <p class="secundaria-content produtos-content mb-5">Aqui você poderá ter mais informações de como são confeccionados os nossos produtos, e assim tirar sua dúvidas.</p>
+                </div>
+            </div>
+            <div class="row gy-4">
+                <div class="col-lg-4">
+                    <div class="project-wrapper">
+                        <img src="./img/jpg/teste1.jpg" alt="">
+                        <a href="https://dunamisgrafdg.web.app/index.html"><i class="bx bxs-info-circle btn btn-danger"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="row gy-4">
+                        <div class="col-lg-12">
+                            <div class="project-wrapper">
+                                <img src="./img/jpg/teste2.jpg" alt="">
+                                <a href="#"><i class="bx bxs-info-circle btn btn-danger"></i></a>
+                            </div>
+                        </div>
+                        <div class="col-lg-12">
+                            <div class="project-wrapper">
+                                <img src="./img/jpg/teste3.jpg" alt="">
+                                <a href=""><i class="bx bxs-info-circle btn btn-danger"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="project-wrapper">
+                        <img src="./img/jpg/teste1.jpg" alt="">
+                        <a href="#"><i class="bx bxs-info-circle btn btn-danger"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--FIM HOME PRODUTOS-->
+    <br><br><br><br>
+    <br><br><br><br>
+    <br><br><br><br>
     <br><br><br><br>
     <br><br><br><br>
 
