icone do menu intrduzido com sucesso

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- LINK ICONES -->
     <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- CSS PERSONALIZADO -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -16,16 +17,16 @@
 </head>
 
 <body>
-    <header class="home">
+    <header class="header">
         <!--NAVBAR-->
-        <nav class="navbar navbar-expand-lg py-2">
+        <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand " href="# "><img class="logo " src="img/jpg/Logo-DMD.png " alt="Logo MDM "></a>
-                <button class="navbar-toggler " type="button " data-bs-toggle="collapse " data-bs-target="#navbarNav " aria-controls="navbarNav " aria-expanded="false " aria-label="Toggle navigation ">
-            <span class="navbar-toggler-icon "></span>
+                <a class="navbar-brand" href="# "><img class="logo " src="img/jpg/Logo-DMD.png " alt="Logo MDM "></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarmenu">
+                    <i class="bi bi-list"></i>
           </button>
-                <div class="collapse navbar-collapse " id="navbarNav ">
-                    <ul class="navbar-nav ms-auto px-4">
+                <div class="collapse navbar-collapse" id="navbarmenu">
+                    <ul class="navbar-nav ms-auto px-3">
                         <li class="nav-item ">
                             <a class="nav-link " href="# ">Home</a>
                         </li>
@@ -40,20 +41,20 @@
                 </div>
             </div>
         </nav>
-        <!--FIM NAVBAR-->
-        <!--INICIO SECTION HOME INICIAL-->
-        <section class="inicial-home vh-100 d-flex align-items-center ">
-            <div class="container ">
-                <div class="row mb-5">
-                    <div class="col-lg-7 mx-auto mt-5 mb-5 text-center container-content">
-                        <h1 class="display-4 text-white mt-5">Tudo o que você precisa em impressão Silk-Screen!</h1>
-                        <p class="text-white my-3 ">Aqui você encontrará uma solução personalizada de acordo com a sua necessidade. Trabalhamos para atender rápido e com excelência.</p>
-                        <a class="btn btn-secondary" href="#">Contato</a>
-                    </div>
+    </header>
+    <!--FIM NAVBAR-->
+    <!--INICIO SECTION HOME INICIAL-->
+    <section class="inicial-home d-flex align-items-center ">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-7 mx-auto text-center container-content">
+                    <h1 class="display-4 text-white">Tudo o que você precisa em impressão Silk-Screen!</h1>
+                    <p class="text-white my-3 ">Aqui você encontrará uma solução personalizada de acordo com a sua necessidade. Trabalhamos para atender rápido e com excelência.</p>
+                    <a class="btn btn-secondary" href="#">Contato</a>
                 </div>
             </div>
-        </section>
-    </header>
+        </div>
+    </section>
     <!--FIM SECTION HOME INICIAL-->
     <!--iNICIO SECTION HOME SECUNDARIA-->
     <section class="secundaria-home">
@@ -112,7 +113,7 @@
             <div class="row">
                 <div class="col-lg-8">
                     <h2 class="text-white">Conheça mais sobre nossos serviços.</h2>
-                    <p class="text-white">Clique em saiba mais, e confira tudo o que podemos lhe oferecer!</p>
+                    <p class="text-white">Confira tudo o que podemos lhe oferecer!</p>
                 </div>
                 <div class="col-auto">
                     <a href="#" class="btn btn-cta mt-4">Saiba Mais</a>
@@ -127,7 +128,7 @@
             <div class="row">
                 <div class="col-12 section-intro">
                     <h2 class="text-primary mb-3">Alguns produtos...</h2>
-                    <p class="secundaria-content produtos-content mb-5">Aqui você poderá ter mais informações de como são confeccionados os nossos produtos, e assim tirar sua dúvidas.</p>
+                    <p class="secundaria-content produtos-content mb-5">Aqui você poderá ter mais informações de como são confeccionados os nossos produtos, e assim tirar suas dúvidas.Clique no botão de informações e saiba mais sobre cada produto! </p>
                 </div>
             </div>
             <div class="row gy-4">
