--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <a class="navbar-brand" href="# "><img class="logo " src="img/jpg/Logo-DMD.png " alt="Logo MDM "></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarmenu">
-                    <i class="bi bi-list"></i>
-          </button>
+                <i class="bi bi-list navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarmenu"></i>
                 <div class="collapse navbar-collapse" id="navbarmenu">
                     <ul class="navbar-nav ms-auto px-3">
                         <li class="nav-item ">
