--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="row">
                 <div class="col-12 section-intro">
                     <h2 class="text-primary mb-3">Alguns produtos...</h2>
-                    <p class="secundaria-content produtos-content mb-5">Aqui você poderá ter mais informações de como são confeccionados os nossos produtos, e assim tirar suas dúvidas.Clique no botão de informações e saiba mais sobre cada produto! </p>
+                    <p class="secundaria-content mb-5">Aqui você poderá ter mais informações de como são confeccionados os nossos produtos, e assim tirar suas dúvidas. Clique no botão de informações e saiba mais sobre cada produto! </p>
                 </div>
             </div>
 
@@ -165,12 +165,6 @@
     </section>
     <!--FIM HOME PRODUTOS-->
     <br><br><br><br>
-    <br><br><br><br>
-    <br><br><br><br>
-    <br><br><br><br>
-    <br><br><br><br>
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js " integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM " crossorigin="anonymous "></script>
 
 
