responsividade e mudança no botão contato navBar

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="row mb-5">
                 <div class="col-md-8 mx-auto text-center">
                     <h2 class="text-primary mb-4">O que você precisa?</h2>
-                    <p class="secundaria-content mb-3">Desenvolvemos e produzimos o seu produto de acordo com a sua nessecidade. Produzimos com excelência e matéria prima de qualidade.</p>
+                    <p class="fsc-p mb-3">Desenvolvemos e produzimos o seu produto de acordo com a sua nessecidade. Produzimos com excelência e matéria prima de qualidade.</p>
                 </div>
             </div>
 
@@ -126,7 +126,7 @@
             <div class="row">
                 <div class="col-12 section-intro">
                     <h2 class="text-primary mb-3">Alguns produtos...</h2>
-                    <p class="secundaria-content mb-5">Aqui você poderá ter mais informações de como são confeccionados os nossos produtos, e assim tirar suas dúvidas. Clique no botão de informações e saiba mais sobre cada produto! </p>
+                    <p class="fsc-p mb-5">Aqui você poderá ter mais informações de como são confeccionados os nossos produtos, e assim tirar suas dúvidas. Clique no botão de informações e saiba mais sobre cada produto! </p>
                 </div>
             </div>
 
