--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <a class="nav-link " href="# ">Sobre</a>
                         </li>
                     </ul>
-                    <a class="btn btn-secondary" href="#">Contato</a>
+                    <a class="btn-secondary-c" href="#">Contato</a>
                 </div>
             </div>
         </nav>
