--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <!-- LINK ICONES -->
     <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
+    <!-- ANIMAÇÕES CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- CSS PERSONALIZADO -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -43,11 +46,11 @@
     <!--FIM NAVBAR-->
     <!--INICIO SECTION HOME INICIAL-->
     <section class="inicial-home d-flex align-items-center ">
-        <div class="container">
+        <div class="container container-top">
             <div class="row">
                 <div class="col-lg-7 mx-auto text-center container-content">
-                    <h1 class="display-4 text-white">Tudo o que você precisa em impressão Silk-Screen!</h1>
-                    <p class="text-white my-3 ">Aqui você encontrará uma solução personalizada de acordo com a sua necessidade. Trabalhamos para atender rápido e com excelência.</p>
+                    <h1 class="display-4 text-white h1-top">Tudo o que você precisa em impressão Silk-Screen!</h1>
+                    <p class="text-white my-3 p-top">Aqui você encontrará uma solução personalizada de acordo com a sua necessidade. Trabalhamos para atender rápido e com excelência.</p>
                     <a class="btn btn-secondary" href="#">Contato</a>
                 </div>
             </div>
@@ -55,7 +58,7 @@
     </section>
     <!--FIM SECTION HOME INICIAL-->
     <!--iNICIO SECTION HOME SECUNDARIA-->
-    <section class="secundaria-home">
+    <section class="secundaria-home overflow-hidden">
         <div class=" container">
             <div class="row mb-5">
                 <div class="col-md-8 mx-auto text-center">
@@ -65,7 +68,7 @@
             </div>
 
             <div class="row g-4">
-                <div class="col-lg-3 col-sm-6">
+                <div class="col-lg-3 col-sm-6 coll-box">
                     <div class="service card-effect">
                         <div class="iconbox">
                             <i class="bx bxs-edit-alt"></i>
@@ -74,7 +77,7 @@
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum,ducimus recusandae, doloremque quam non dolore obcaecati!</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-sm-6">
+                <div class="col-lg-3 col-sm-6 coll-box">
                     <div class="service card-effect">
                         <div class="iconbox">
                             <i class="bx bxs-color-fill"></i>
@@ -83,7 +86,7 @@
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum,ducimus recusandae, doloremque quam non dolore obcaecati!</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-sm-6">
+                <div class="col-lg-3 col-sm-6 coll-box">
                     <div class="service card-effect">
                         <div class="iconbox">
                             <i class="bx bxs-note"></i>
@@ -92,7 +95,7 @@
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum,ducimus recusandae, doloremque quam non dolore obcaecati!</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-sm-6">
+                <div class="col-lg-3 col-sm-6 coll-box">
                     <div class="service card-effect">
                         <div class="iconbox">
                             <i class="bx bxs-rocket"></i>
@@ -109,7 +112,7 @@
     <div class="cta">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8">
+                <div class="col-lg-8 box-text">
                     <h2 class="text-white">Conheça mais sobre nossos serviços.</h2>
                     <p class="text-white">Confira tudo o que podemos lhe oferecer!</p>
                 </div>
@@ -166,6 +169,7 @@
     <!--FIM HOME PRODUTOS-->
     <br><br><br><br>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js " integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM " crossorigin="anonymous "></script>
+    <script src="main.js"></script>
 
 
 </body>
