--- a/index.html
+++ b/index.html
@@ -164,14 +164,46 @@
                 </div>
             </div>
         </div>
-
     </section>
     <!--FIM HOME PRODUTOS-->
-    <br><br><br><br>
+    <!--INICIO FOOTER-->
+    <footer class="bg-dark text-white pt-5 pb-4">
+        <div class="container text-center text-md-left">
+            <div class="row text-center text-md-left">
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+                    <h5 class="text-uppercase mb-4 font-weight-bold text-primary">D<span class="text-danger">M</span>D&reg;</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error repellat id ullam commodi ex tempore dolore autem, eius aliquid facilis ipsa doloribus rem, necessitatibus velit et. Suscipit vel voluptatibus corrupti?</p>
+                </div>
+
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+                    <h5 class="text-uppercase mb-4 font-weight-bold text-danger">Produtos</h5>
+                    <p>
+                        <a class="text-white" style="text-decoration: none;" href="#">Adesivos</a>
+                    </p>
+                    <p>
+                        <a class="text-white" style="text-decoration: none;" href="#">Paineis</a>
+                    </p>
+                    <p>
+                        <a class="text-white" style="text-decoration: none;" href="#">Teclados de Membrana</a>
+                    </p>
+                </div>
+
+                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+                    <h5 class="text-uppercase mb-4 font-weight-bold text-danger">Sobre</h5>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis commodi sapiente aliquam quam vero, omnis quaerat, hic ipsum, eum itaque veritatis velit.</p>
+                </div>
+                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+                    <h5 class="text-uppercase mb-4 font-weight-bold text-danger">Contato</h5>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <div style=" display: flex; align-items: center; justify-content: center; height: 50px; font-size: 25px; font-weight: 600; background-color: rgb(35, 35, 35);" class="text-primary text-center">D<span class="text-danger">M</span>D&reg; <span style="font-size: 15px;">/ Todos os direitos reservados 2022.</span></div>
+    <!--FIM FOOTER-->
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js " integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM " crossorigin="anonymous "></script>
     <script src="main.js"></script>
-
-
 </body>
 
 </html>
