ajustes no footer e criação da cta2

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </header>
     <!--FIM NAVBAR-->
     <!--INICIO SECTION HOME INICIAL-->
-    <section class="inicial-home d-flex align-items-center ">
+    <section class="inicial-home d-flex align-items-center overflow-hidden">
         <div class="container container-top">
             <div class="row">
                 <div class="col-lg-7 mx-auto text-center container-content">
@@ -112,7 +112,7 @@
     <div class="cta">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 box-text">
+                <div class="col-lg-8">
                     <h2 class="text-white">Conheça mais sobre nossos serviços.</h2>
                     <p class="text-white">Confira tudo o que podemos lhe oferecer!</p>
                 </div>
@@ -166,39 +166,60 @@
         </div>
     </section>
     <!--FIM HOME PRODUTOS-->
+
+    <!--iNICIO CTA2-->
+    <div class="cta2">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 ">
+                    <h2 class="text-white">Atendemos a sua necessidade !</h2>
+                    <p class="text-white">Desenvolvemos e produzimos diversos produtos, respeitando e atendendo as suas necessidades. Tudo com a maior eficiência e melhor qualidade.
+                    </p>
+                </div>
+                <div class="col-lg-6 ">
+                    <h2 class="text-white">Atendemos a sua necessidade !</h2>
+                    <p class="text-white">Desenvolvemos e produzimos diversos produtos, respeitando e atendendo as suas necessidades. Tudo com a maior eficiência e melhor qualidade.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--FIM CTA2-->
+
     <!--INICIO FOOTER-->
     <footer class="bg-dark text-white pt-5 pb-4">
         <div class="container text-center text-md-left">
             <div class="row text-center text-md-left">
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <h5 class="text-uppercase mb-4 font-weight-bold text-primary">D<span class="text-danger">M</span>D&reg;</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error repellat id ullam commodi ex tempore dolore autem, eius aliquid facilis ipsa doloribus rem, necessitatibus velit et. Suscipit vel voluptatibus corrupti?</p>
-                </div>
 
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-5 mb-5">
+                    <a href="#">
+                        <img src="./img/jpg/Logo-DMD.png" alt="Logo DMD" style="width: 170px;">
+                    </a>
+                </div>
+                <div class="col-md-3 col-lg- col-xl-3 mx-auto mt-3">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger">Produtos</h5>
                     <p>
-                        <a class="text-white" style="text-decoration: none;" href="#">Adesivos</a>
+                        <a class="text-white" style="text-decoration: none;" href="#">Teclados de Membrana</a>
                     </p>
                     <p>
                         <a class="text-white" style="text-decoration: none;" href="#">Paineis</a>
                     </p>
                     <p>
-                        <a class="text-white" style="text-decoration: none;" href="#">Teclados de Membrana</a>
+                        <a class="text-white " style="text-decoration: none;" href="#">Adesivos</a>
                     </p>
                 </div>
 
-                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger">Sobre</h5>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis commodi sapiente aliquam quam vero, omnis quaerat, hic ipsum, eum itaque veritatis velit.</p>
                 </div>
-                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger">Contato</h5>
                 </div>
             </div>
         </div>
     </footer>
-    <div style=" display: flex; align-items: center; justify-content: center; height: 50px; font-size: 25px; font-weight: 600; background-color: rgb(35, 35, 35);" class="text-primary text-center">D<span class="text-danger">M</span>D&reg; <span style="font-size: 15px;">/ Todos os direitos reservados 2022.</span></div>
+    <div style=" display: flex; align-items: center; justify-content: center; height: 50px; font-size: 17px; font-weight: 600; background-color: rgb(31, 33, 37);" class="text-primary text-center">D<span class="text-danger">M</span>D &copy;2022 <span style="font-size: 17px;">&nbsp;/ Todos os direitos reservados.</span></div>
     <!--FIM FOOTER-->
 
 
