finalizado cta2 com carrosel

--- a/index.html
+++ b/index.html
@@ -171,15 +171,25 @@
     <div class="cta2">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 ">
+                <div class="col-lg-6 mb-5 mt-5">
                     <h2 class="text-white">Atendemos a sua necessidade !</h2>
                     <p class="text-white">Desenvolvemos e produzimos diversos produtos, respeitando e atendendo as suas necessidades. Tudo com a maior eficiência e melhor qualidade.
                     </p>
                 </div>
-                <div class="col-lg-6 ">
-                    <h2 class="text-white">Atendemos a sua necessidade !</h2>
-                    <p class="text-white">Desenvolvemos e produzimos diversos produtos, respeitando e atendendo as suas necessidades. Tudo com a maior eficiência e melhor qualidade.
-                    </p>
+                <div class="col-lg-6 mb-5">
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner" style="border-radius: 10px; position: relative;">
+                            <div class="carousel-item active">
+                                <img src="./img/img1.jpg" class="d-block w-100 " alt="img-qualidade">
+                            </div>
+                            <div class="carousel-item ">
+                                <img src="./img/img2.jpg " class="d-block w-100 " alt="img-cliente">
+                            </div>
+                            <div class="carousel-item ">
+                                <img src="./img/img3.jpg " class="d-block w-100 " alt="img-">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -188,43 +198,44 @@
 
     <!--INICIO FOOTER-->
     <footer class="bg-dark text-white pt-5 pb-4">
-        <div class="container text-center text-md-left">
-            <div class="row text-center text-md-left">
+        <div class="container text-center text-md-left ">
+            <div class="row text-center text-md-left ">
 
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-5 mb-5">
-                    <a href="#">
-                        <img src="./img/jpg/Logo-DMD.png" alt="Logo DMD" style="width: 170px;">
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-5 mb-5 ">
+                    <a href="# ">
+                        <img src="./img/jpg/Logo-DMD.png " alt="Logo DMD " style="width: 170px; ">
                     </a>
                 </div>
-                <div class="col-md-3 col-lg- col-xl-3 mx-auto mt-3">
-                    <h5 class="text-uppercase mb-4 font-weight-bold text-danger">Produtos</h5>
+                <div class="col-md-3 col-lg- col-xl-3 mx-auto mt-3 ">
+                    <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Produtos</h5>
                     <p>
-                        <a class="text-white" style="text-decoration: none;" href="#">Teclados de Membrana</a>
+                        <a class="text-white " style="text-decoration: none; " href="# ">Teclados de Membrana</a>
                     </p>
                     <p>
-                        <a class="text-white" style="text-decoration: none;" href="#">Paineis</a>
+                        <a class="text-white " style="text-decoration: none; " href="# ">Paineis</a>
                     </p>
                     <p>
-                        <a class="text-white " style="text-decoration: none;" href="#">Adesivos</a>
+                        <a class="text-white " style="text-decoration: none; " href="# ">Adesivos</a>
                     </p>
                 </div>
 
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <h5 class="text-uppercase mb-4 font-weight-bold text-danger">Sobre</h5>
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 ">
+                    <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Sobre</h5>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis commodi sapiente aliquam quam vero, omnis quaerat, hic ipsum, eum itaque veritatis velit.</p>
                 </div>
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <h5 class="text-uppercase mb-4 font-weight-bold text-danger">Contato</h5>
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 ">
+                    <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Contato</h5>
                 </div>
             </div>
         </div>
     </footer>
-    <div style=" display: flex; align-items: center; justify-content: center; height: 50px; font-size: 17px; font-weight: 600; background-color: rgb(31, 33, 37);" class="text-primary text-center">D<span class="text-danger">M</span>D &copy;2022 <span style="font-size: 17px;">&nbsp;/ Todos os direitos reservados.</span></div>
+    <div style=" display: flex; align-items: center; justify-content: center; height: 50px; font-size: 17px; font-weight: 600; background-color: rgb(31, 33, 37); " class="text-primary text-center ">D<span class="text-danger
+                        ">M</span>D &copy;2022 <span style="font-size: 17px; ">&nbsp;/ Todos os direitos reservados.</span></div>
     <!--FIM FOOTER-->
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js " integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM " crossorigin="anonymous "></script>
-    <script src="main.js"></script>
+    <script src="main.js "></script>
 </body>
 
 </html>
