ajustando links so footer

--- a/index.html
+++ b/index.html
@@ -243,12 +243,13 @@
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Contato</h5>
                     <a href="#">
                         <p class="text-white">
-                            <i class="bi bi-whatsapp"></i>&nbsp;&nbsp;(11) 96258-4708
+                            <i class="bi bi-whatsapp">&nbsp;(11) 96258-4708</i>
                         </p>
                     </a>
                     <a href="#">
                         <p class="text-white">
-                            <i class="bi bi-envelope"></i>&nbsp;dmdmembranas@gmail.com
+                            <i class="bi bi-envelope">&nbsp;dmdmembranas@gmail.com</i>
+
                         </p>
                     </a>
                 </div>
